force-app/main/default/objects/Passenger_Detail__c/Passenger_Detail__c.object-meta.xml
<CustomObject>
    <label>Passenger Detail</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Passenger Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passenger Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>