force-app/main/default/objects/Passenger_Detail__c/fields/Full_Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Passenger_Name__c</fullName>
    <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Passenger Name</label>
    <type>Text</type>
</CustomField>