force-app/main/default/objects/Passenger_Detail__c/validationRules/Passport_Required_International.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_Required_International</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Passport_Number__c) &amp;&amp;
Booking__r.Flight__r.Is_International__c = true</errorConditionFormula>
    <errorDisplayField>Passport_Number__c</errorDisplayField>
    <errorMessage>Passport number is required for international flights.</errorMessage>
</ValidationRule>